--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "./node_modules/@vue/cli-service/bin/vue-cli-service.js serve",
+    "build": "./node_modules/@vue/cli-service/bin/vue-cli-service.js build",
+    "lint": "./node_modules/@vue/cli-service/bin/vue-cli-service.js lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "@vue/cli-service-global": "^3.2.1",
     "babel-eslint": "^10.0.1",
+    "css-loader": "^2.0.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "style-loader": "^0.23.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
